test(test): add support for load test data from csv

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <version>2.1-groovy-3.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
